# market_data_etl

./: -- SQLite.sql  .gitignore  CLAUDE.md  CLI_COMMANDS.md  DATABASE SCHEMA.txt  INTEREST_RATE_OPTIMIZATION.md  PYTEST_CLEANUP_SUMMARY.md  README.md  SWEDISH_INDICATORS_IMPLEMENTATION.md  claude_installation_fix.md  database_improvements_spec.md  economic_data_mapping.csv  improv.md  lab_notebook.ipynb  market_data.db  notes.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  sql_lite_frågor.sql  tech_doc.md  test_portfolio.json
examples/: deduplication_example.py
market_data_etl/: __init__.py  config.py
market_data_etl/cli/: __init__.py  commands.py  main.py
market_data_etl/data/: __init__.py  data_alignment.py  fetchers.py  financial_fetcher.py  financial_standardizer.py  forward_fill.py  models.py
market_data_etl/database/: __init__.py  manager.py
market_data_etl/etl/: __init__.py  extract.py  load.py  transform.py
market_data_etl/utils/: __init__.py  database_helpers.py  error_handlers.py  exceptions.py  logging.py  trading_calendar.py  transformation_helpers.py  validation.py  validation_helpers.py
output_data/: balance_sheets.csv  cash_flows.csv  companies.csv  economic_data.csv  economic_indicator_data.csv  economic_indicators.csv  financial_ratios.csv  income_statements.csv  portfolio_holdings.csv  portfolios.csv  price_data.csv  prices.csv
portfolios/: complete_investment_portfolio copy.json  complete_investment_portfolio.json  example_portfolio.json  test_portfolio.json
tests/: __init__.py  conftest.py  run_tests.py
tests/fixtures/: sample_data.yaml  test_config.yaml  test_economic_indicators.yaml
tests/integration/: __init__.py  test_cli_commands.py  test_cli_end_to_end.py  test_etl_pipeline.py
tests/unit/: __init__.py  test_config.py  test_database_schema.py  test_economic_indicators.py
transactions/: example_transactions.csv
